# OpenDSAS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  codecov.yml
.github/workflows/: alpine-static.yml  benchmark-compare.yml  benchmark.yml  clang-format.yml  cmake-multi-platform.yml  deb.yml  linux-release.yml  linux-static.yml  mac-windows-release.yml  release.yml
Formula/: opendsas.rb
benchmark/: benchmark.cpp
packaging/homebrew/: opendsas.rb
python/: LICENSE  README.md  pyproject.toml
python/src/opendsas/: __init__.py
src/: baseline.cpp  baseline.hpp  cli.cpp  cli.hpp  dsas.cpp  dsas.hpp  exception.hpp  geometry.cpp  geometry.hpp  grid.cpp  grid.hpp  intersect.cpp  intersect.hpp  main.cpp  options.cpp  options.hpp  shoreline.cpp  shoreline.hpp  transect.cpp  transect.hpp  utility.cpp  utility.hpp
tests/: baseline.test.cpp  cli.test.cpp  dsas.test.cpp  geometry.test.cpp  grid.test.cpp  integration.test.cpp  intersect.test.cpp  shoreline.test.cpp  transect.test.cpp  utility.test.cpp
tests/test_case/: sample_baseline_offshore.geojson  sample_baseline_onshore.geojson  sample_shorelines.geojson  sample_transects.geojson
