[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendsas"
dynamic = ["version"]
description = "High-performance Digital Shoreline Analysis System CLI — static binary, packaged for pip"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Boyuan Lu" }]
keywords = ["dsas", "shoreline", "gis", "coastal", "cli"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/lubyant/OpenDSAS"
Repository = "https://github.com/lubyant/OpenDSAS"
Issues = "https://github.com/lubyant/OpenDSAS/issues"

[project.scripts]
dsas = "opendsas:main"

[tool.hatch.version]
path = "src/opendsas/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/opendsas"]

[tool.hatch.build.targets.wheel.force-include]
"dist-bin" = "opendsas/bin"
